--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
   "devDependencies": {
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3"
+  },
+  "browser": {
+    "assert": false
   }
 }
